--- a/.default-config/example-projects/node-4.2.3/package.json
+++ b/.default-config/example-projects/node-4.2.3/package.json
@@ -1,5 +1,8 @@
 {
   "organization" : "corespring",
   "name" : "an-example-cs-builder-app",
-  "version" : "0.0.1"
+  "version" : "0.0.1",
+  "files" : [
+   "Procfile", "index.js"
+  ]
 }
