--- a/spec/log-config.yml
+++ b/spec/log-config.yml
@@ -1,3 +1,6 @@
-default: "info"
-repo-artifacts: "debug"
-repo-local-store-spec: "debug"
+default: "warn"
+deploy-command: "debug"
+local-store: "debug"
+remote-and-local-store: "debug"
+s3-store: "debug"
+make-artifact-git: "debug"
