--- a/spec/log-config.yml
+++ b/spec/log-config.yml
@@ -1,6 +1,8 @@
 default: "warn"
+base-store: "debug"
 deploy-command: "debug"
 local-store: "debug"
 remote-and-local-store: "debug"
-s3-store: "debug"
+s3-store: "info"
 make-artifact-git: "debug"
+$: "info"
