--- a/spec/log-config.yml
+++ b/spec/log-config.yml
@@ -3,7 +3,8 @@ base-store: "debug"
 deploy-command: "debug"
 local-store: "debug"
 remote-and-local-store: "debug"
-s3-store: "info"
+remote-and-local-store-spec: "debug"
+s3-store: "debug"
 make-artifact-git: "debug"
 $: "info"
 CLI: "debug"
