add some more tests

--- a/spec/log-config.yml
+++ b/spec/log-config.yml
@@ -6,5 +6,6 @@ remote-and-local-store: "debug"
 remote-and-local-store-spec: "debug"
 s3-store: "debug"
 make-artifact-git: "debug"
-$: "info"
+heroku-deployer: "info"
+$: "warn"
 CLI: "debug"
