the repo builder should re-read the hash and tag after the build has run - in case the build updated it

--- a/spec/log-config.yml
+++ b/spec/log-config.yml
@@ -7,5 +7,5 @@ remote-and-local-store-spec: "debug"
 s3-store: "debug"
 make-artifact-git: "debug"
 heroku-deployer: "info"
-$: "warn"
+$: "info"
 CLI: "debug"
